deploy/k8s/drupal-adminer-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drupal-adminer
  labels:
    app: drupal-adminer
spec:
  replicas: 0
  selector:
    matchLabels:
      app: drupal-adminer
  template:
    metadata:
      labels:
        app: drupal-adminer
    spec:
      containers:
        - name: adminer
          image: adminer
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 100M
            limits:
              cpu: 2000m
              memory: 4000M
