deploy/k8s/drupal-app-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: drupal-app-svc
  namespace: default
spec:
  ports:
    - name: nginx
      port: 8080
  selector:
    app: drupal-app
