deploy/k8s/drupal-mariadb-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: drupal-mariadb
spec:
  ports:
    - port: 3306
  selector:
    app: drupal-mariadb
  clusterIP: None
