deploy/k8s/drupal-app-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drupal-app-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/preserve-trailing-slash: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - $(SITE_URL)
      secretName: drupal-tls
  rules:
    - host: $(SITE_URL)
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: drupal-app-svc
                port:
                  name: nginx
